--- a/TheHouseOfDelightV1/Views/Users/Users.cshtml
+++ b/TheHouseOfDelightV1/Views/Users/Users.cshtml
@@ -5,42 +5,70 @@
 
 <h1>Users</h1>
 
-<form>
-    <div class="form-row">
-        <div class="form-group col-sm-6">
-            <label for="inputName">Name</label>
-            <input type="text" class="form-control" id="inputName" placeholder="Name">
-        </div>
-        <div class="form-group col-sm-6">
-            <label for="inputSurname"> Surname</label>
-            <input type="text" class="form-control" id="inputSurname" placeholder="Surname">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-        </div>
-        <div class="form-group  ">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-            <input type="checkbox" id="showPass" />
 
-        </div>
-    </div>
+<a href="/Users/AddNewUser/" class="btn btn-primary">Add New User</a>
 
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity">
-        </div>
-        <!--<div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
-                <option>...</option>
-            </select>
-        </div>-->
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Surname</th>
+            <th scope="col">Email</th>
+            <th scope="col">Password</th>
+            <th scope="col">City</th>
+            <th scope="col">Edit|Delete</th>
+        </tr>
+    </thead>
+    <tbody>
 
-    </div>
+        @foreach (var item in Model)
+        {
+            <tr>
 
-        <button type="submit" class="btn btn-primary">Sign in</button>
+                <td>@item.ID</td>
+                <td>@item.Name</td>
+                <td>@item.Surname</td>
+                <td>@item.Email</td>
+                <td>@item.Password</td>
+                <td>@item.City</td>
+
+
+                <td>
+                    <a href="/Users/EditUser/@item.ID" class="btn btn-primary">Edit</a>
+                    <button type="button" id="btnDeleteUsers" class="btn btn-primary btnDeleteUsers" data-usersid="@item.ID">Delete</button>
+
+                </td>
+            </tr>
+
+        }
+
+    </tbody>
+</table>
+
+
+<div>
+    <form id="DeleteUsersForm" method="post" action="/Users/DeleteUsers">
+        <input type="hidden" id="idField" name="ID" value="0" />
+
     </form>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+<script>
+
+    $(document).ready(function () {
+
+
+        $(".btnDeleteUsers").click(function () {
+            var IdOfUsers = $(this).data("usersid");
+            $("#idField").val(IdOfUsers);
+            if (confirm('Are you sure to delete Users?')) {
+                $("#DeleteUsersForm").submit();
+            }
+         });
+
+});
+</script>
+
