--- a/TheHouseOfDelightV1/Views/Admin1/AddNew.cshtml
+++ b/TheHouseOfDelightV1/Views/Admin1/AddNew.cshtml
@@ -5,34 +5,59 @@
 
 <h1>AddNew</h1>
 
-<form method="post" action="/Admin1/AddNew">
-   
+<form method="post" action="/Admin1/AddNew" class="needs-validation" novalidate>
+
     <div class="form-group  col-md-12">
         <label for="Name">Name</label>
-        <input type="text" class="form-control" id="Name" name="Name" value="">
+        <input type="text" class="form-control" id="Name" name="Name" value="" maxlength="50" required>
     </div>
     <div class="form-group  col-md-12">
         <label for="Description">Description</label>
-        <input type="text" class="form-control" id="Description" name="Description" value="">
+        <input type="text" class="form-control" id="Description" name="Description" value="" maxlength="1000" required>
     </div>
     <div class="form-group col-md-2 ">
         <label for="PrepTime">Prep Time</label>
-        <input type="text" class="form-control" id="PrepTime" name="PrepTime" value="">
+        <input type="number" class="form-control" id="PrepTime" name="PrepTime" value="" min="0" max="1000" required>
     </div>
     <div class="form-group col-md-2">
         <label for="CookTime">Cook Time</label>
-        <input type="text" class="form-control" id="CookTime" name="CookTime" value="">
+        <input type="number" class="form-control" id="CookTime" name="CookTime" value="" min="0" max="1000" required>
     </div>
     <div class="form-group col-md-2">
         <label for="TotatTime">Total Time</label>
-        <input type="text" class="form-control" id="TotatTime" name="TotatTime" value="">
+        <input type="number" class="form-control" id="TotatTime" name="TotatTime" value="" min="0" max="1000" required>
     </div>
     <div class="form-group col-md-2">
         <label for="Servings">Servings</label>
-        <input type="text" class="form-control" id="Servings" name="Servings" value="">
+        <input type="number" class="form-control" id="Servings" name="Servings" value="" min="0" max="1000" required>
     </div>
 
 
     <input type="submit" class="btn btn-primary " value="Save" />
     <a href="/admin1/Food" class="btn btn-primary ">Back</a>
 </form>
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+
+</script>
