--- a/TheHouseOfDelightV1/Views/Admin1/AddNewTypes.cshtml
+++ b/TheHouseOfDelightV1/Views/Admin1/AddNewTypes.cshtml
@@ -7,18 +7,43 @@
 
 <h1>AddNewTypes</h1>
 
-<form method="post" action="/Admin1/AddNewTypes">
+<form method="post" id="AddTypesForm" action="/Admin1/AddNewTypes"  class="needs-validation" novalidate>
 
     <div class="form-group  col-md-12">
         <label for="Name">Name</label>
-        <input type="text" class="form-control" id="Name" name="Name" value="">
+        <input type="text" class="form-control" id="Name" name="Name" value="" maxlength="1000" required>
     </div>
     <div class="form-group  col-md-12">
         <label for="Description">Description</label>
-        <input type="text" class="form-control" id="Description" name="Description" value="">
+        <input type="text" class="form-control" id="Description" name="Description" value=""  maxlength="5000"  required>
     </div>
 
 
-    <input type="submit" class="btn btn-primary " value="Save" />
+    <input type="submit" id="btnSaveTypes"  class="btn btn-primary btnSaveTypes " value="Save" />
     <a href="/admin1/Types" class="btn btn-primary ">Back</a>
 </form>
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+    (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+              var validation = Array.prototype.filter.call(forms, function (form) {                
+              form.addEventListener('submit', function (event) {
+                if (form.checkValidity() === false) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+    })();
+
+   </script>
