--- a/TheHouseOfDelightV1/Views/Admin1/Edit.cshtml
+++ b/TheHouseOfDelightV1/Views/Admin1/Edit.cshtml
@@ -3,34 +3,59 @@
     ViewData["Title"] = "Edit";
 }
 
-    <form method="post" action="/Admin1/Edit">
-        <input type="hidden" name="ID" value="@Model.ID" />
-        <div class="form-group  col-md-12">
-            <label for="Name">Name</label>
-            <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
-        </div>
-        <div class="form-group  col-md-12">
-            <label for="Description">Description</label>
-            <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description">
-        </div>
-        <div class="form-group col-md-2 ">
-            <label for="PrepTime">Prep Time</label>
-            <input type="text" class="form-control" id="PrepTime" name="PrepTime" value="@Model.PrepTime">
-        </div>
-        <div class="form-group col-md-2">
-            <label for="CookTime">Cook Time</label>
-            <input type="text" class="form-control" id="CookTime" name="CookTime" value="@Model.CookTime">
-        </div>
-        <div class="form-group col-md-2">
-            <label for="TotatTime">Total Time</label>
-            <input type="text" class="form-control" id="TotatTime" name="TotatTime" value="@Model.TotatTime">
-        </div>
-        <div class="form-group col-md-2">
-            <label for="Servings">Servings</label>
-            <input type="text" class="form-control" id="Servings" name="Servings" value="@Model.Servings">
-        </div>
+<form method="post" action="/Admin1/Edit" class="needs-validation" novalidate>
+    <input type="hidden" name="ID" value="@Model.ID" />
+    <div class="form-group  col-md-12">
+        <label for="Name">Name</label>
+        <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name" required>
+    </div>
+    <div class="form-group  col-md-12">
+        <label for="Description">Description</label>
+        <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description" required>
+    </div>
+    <div class="form-group col-md-2 ">
+        <label for="PrepTime">Prep Time</label>
+        <input type="text" class="form-control" id="PrepTime" name="PrepTime" value="@Model.PrepTime" required>
+    </div>
+    <div class="form-group col-md-2">
+        <label for="CookTime">Cook Time</label>
+        <input type="text" class="form-control" id="CookTime" name="CookTime" value="@Model.CookTime" required>
+    </div>
+    <div class="form-group col-md-2">
+        <label for="TotatTime">Total Time</label>
+        <input type="text" class="form-control" id="TotatTime" name="TotatTime" value="@Model.TotatTime" required>
+    </div>
+    <div class="form-group col-md-2">
+        <label for="Servings">Servings</label>
+        <input type="text" class="form-control" id="Servings" name="Servings" value="@Model.Servings" required>
+    </div>
 
 
-        <input type="submit" class="btn btn-primary " value ="Save"/>
-        <a href="/admin1/food" class="btn btn-primary ">Back</a>
-    </form>
+    <input type="submit" class="btn btn-primary " value="Save" />
+    <a href="/admin1/food" class="btn btn-primary ">Back</a>
+</form>
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+
+</script>
