--- a/TheHouseOfDelightV1/Views/Admin1/EditProduct.cshtml
+++ b/TheHouseOfDelightV1/Views/Admin1/EditProduct.cshtml
@@ -3,20 +3,43 @@
     ViewData["Title"] = "EditProduct";
 }
 
-<form method="post" action="/Admin1/EditProduct">
+<form method="post" action="/Admin1/EditProduct" class="needs-validation" novalidate>
     <input type="hidden" name="ID" value="@Model.ID" />
     <div class="form-group  col-md-12">
         <label for="Name">Name</label>
-        <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
+        <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name" maxlength="1000" required>
     </div>
     <div class="form-group  col-md-12">
         <label for="Description">Description</label>
-        <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description">
+        <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description" maxlength="5000" required>
     </div>
-    
+
 
 
     <input type="submit" class="btn btn-primary " value="Save" />
     <a href="/admin1/products" class="btn btn-primary ">Back</a>
 </form>
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+    (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+              var validation = Array.prototype.filter.call(forms, function (form) {
+              form.addEventListener('submit', function (event) {
+                if (form.checkValidity() === false) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+    })();
+
+</script>
