--- a/TheHouseOfDelightV1/Views/Shared/_Layout.cshtml
+++ b/TheHouseOfDelightV1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn">LogIn</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AboutUs" asp-action="AboutUs">AboutUs</a>
 
                         </li>
@@ -44,7 +47,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                
+
                     </ul>
                 </div>
             </div>
@@ -58,7 +61,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - TheHouseOfDelightV1 - <a asp-area="" asp-controller="Home" asp-action="Privacy" asp-controller ="AboutUs" asp-controller ="Admin" sp-controller ="Users" asp-action="Products" asp-action="Types"></a>
+            &copy; 2020 - TheHouseOfDelightV1 - <a asp-area="" asp-controller="Home" asp-action="Privacy" asp-controller ="AboutUs" asp-controller ="Admin" sp-controller ="Users" asp-action="Products" asp-action="Types"  asp-controller ="Account"></a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
