--- a/TheHouseOfDelightV1/Views/Users/AddNewUser.cshtml
+++ b/TheHouseOfDelightV1/Views/Users/AddNewUser.cshtml
@@ -1,52 +1,105 @@
-﻿@model List<TheHouseOfDelightV1.DbModel.Users>
+﻿
 @{
     ViewData["Title"] = "Users";
 }
 
 <h1>Users</h1>
 
-<form>
+<form method="post" action="/Users/AddNewUser" id="AddUserForm"  class="needs-validation" novalidate>
     <div class="form-row">
         <div class="form-group col-sm-6">
             <label for="inputName">Name</label>
-            <input type="text" class="form-control" id="inputName" placeholder="Name">
+            <input type="text" class="form-control" id="Name" name="Name" maxlength="50" placeholder="Name" required>
         </div>
         <div class="form-group col-sm-6">
             <label for="inputSurname"> Surname</label>
-            <input type="text" class="form-control" id="inputSurname" placeholder="Surname">
+            <input type="text" class="form-control" id="Surname" name="Surname" maxlength="50" placeholder="Surname" required>
         </div>
         <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            <input type="email" class="form-control" id="Email" name="Email" placeholder="Email" required>
         </div>
-        <div class="form-group  ">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
 
-
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password" maxlength="50" name="Password" id="Password" required>
         </div>
-        <div class="form-group  ">
-            <label for="inputPassword4">Confirm Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder=" Confirm Password">
-            <input type="checkbox" id="showPass" />
-
+        <div class="form-group">
+            <input type="password" class="form-control" id="repassword" placeholder="Confirm Password" maxlength="50" name="repassword" required>
         </div>
     </div>
+
 
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity">
+            <input type="text" class="form-control" id="City" maxlength="50" name="City" required>
         </div>
-        <!--<div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
-                <option>...</option>
-            </select>
-        </div>-->
-
     </div>
 
-    <button type="submit" class="btn btn-primary">Sign up</button>
+    <input type="submit" id="btnSaveUsers" class="btn btn-primary btnSaveUsers " value="Save" />
+    <a href="/users/Users" class="btn btn-primary ">Back</a>
 </form>
+
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+     (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+              var validation = Array.prototype.filter.call(forms, function (form) {                
+              form.addEventListener('submit', function (event) {
+                var password1 = $('#Password').val();
+                var password2 = $('#repassword').val();
+                if (form.checkValidity() === false || password1 != password2) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+    })();
+
+    $(document).ready(function () {
+
+       
+
+        //$('#repassword').focusout(function () {
+        //    var password1 = $('#Password').val();
+        //    var password2 = $('#repassword').val();
+        //    if (password1 != password2) {
+        //        $('#btnSaveUsers').prop('disabled', true);
+        //    }
+        //    else {
+        //        $('#btnSaveUsers').prop('disabled', false);
+        //    }
+        //});
+
+        //$('#Password').focusout(function () {
+        //    var password1 = $('#Password').val();
+        //    var password2 = $('#repassword').val();
+        //    if (password1 != password2) {
+        //        $('#btnSaveUsers').prop('disabled', true);
+        //    }
+        //    else {
+        //        $('#btnSaveUsers').prop('disabled', false);
+        //    }
+        //});
+
+        //$('#btnSaveUsers').click(function (event) {
+        //    event.preventDefault();
+        //    if ($(this).checkValidity() === false) {
+        //          event.preventDefault();
+        //          event.stopPropagation();
+        //        }
+            
+        //});
+
+    });
+</script>
