--- a/TheHouseOfDelightV1/Views/Users/EditUser.cshtml
+++ b/TheHouseOfDelightV1/Views/Users/EditUser.cshtml
@@ -6,7 +6,7 @@
 <h1>EditUser</h1>
 
 
-<form method="post" action="/Users/Edit">
+<form method="post" action="/Users/EditUser">
     <input type="hidden" name="ID" value="@Model.ID" />
     <div class="form-group  col-md-12">
         <label for="Name">Name</label>
