--- a/TheHouseOfDelightV1/Views/Account/LogIn.cshtml
+++ b/TheHouseOfDelightV1/Views/Account/LogIn.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group col-md-3">
         <input type="submit" id="btnLogIn" class="btn btn-primary btnLogIn " value="LogIn" />
-        <a href="/Home/Index" class="btn btn-primary ">Back</a>
+        <a href="/Account/SignUp" class="btn btn-primary ">SignUp</a>
         </div>
 </form>
 
