--- a/TheHouseOfDelightV1/Views/Account/SignUp.cshtml
+++ b/TheHouseOfDelightV1/Views/Account/SignUp.cshtml
@@ -5,3 +5,68 @@
 
 <h1>SignUp</h1>
 
+<form method="post" action="/Account/SignUp" id="AddSignUp" class="needs-validation" novalidate>
+    <div class="form-row">
+        <div class="form-group col-sm-6">
+            <label for="inputName">Name</label>
+            <input type="text" class="form-control" id="Name" name="Name" maxlength="50" placeholder="Name" required>
+        </div>
+        <div class="form-group col-sm-6">
+            <label for="inputSurname"> Surname</label>
+            <input type="text" class="form-control" id="Surname" name="Surname" maxlength="50" placeholder="Surname" required>
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="Email" name="Email" placeholder="Email" required>
+        </div>
+
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password" maxlength="50" name="Password" id="Password" required>
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" id="repassword" placeholder="Confirm Password" maxlength="50" name="repassword" required>
+        </div>
+    </div>
+
+
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" id="City" maxlength="50" name="City" required>
+        </div>
+    </div>
+
+    <input type="submit" id="btnSaveUsers" class="btn btn-primary btnSaveUsers " value="Save" />
+    <a href="/Account/LogIn" class="btn btn-primary ">Back</a>
+</form>
+
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+     (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+              var validation = Array.prototype.filter.call(forms, function (form) {
+              form.addEventListener('submit', function (event) {
+                var password1 = $('#Password').val();
+                var password2 = $('#repassword').val();
+                if (form.checkValidity() === false || password1 != password2) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+    })();
+
+    $(document).ready(function () {
+
+    });
+</script>
